--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,17 @@ python-keycloak = "^3.7.0"
 pydantic-settings = "^2.1.0"
 
 
+[tool.poetry.group.dev.dependencies]
+ruff = "^0.1.7"
+black = "^23.11.0"
+pytest = "^7.4.3"
+
+[tool.black]
+line-length = 120
+
+[tool.ruff]
+line-length = 120
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
