--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["lchen-2101 <73617864+lchen-2101@users.noreply.github.com>"]
 readme = "README.md"
-packages = [{include = "regtech-api-commons", from = "src"}]
+packages = [{include = "regtech_api_commons", from = "src"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
@@ -14,6 +14,17 @@ python-jose = "^3.3.0"
 python-keycloak = "^3.7.0"
 pydantic-settings = "^2.1.0"
 
+
+[tool.poetry.group.dev.dependencies]
+ruff = "^0.1.7"
+black = "^23.11.0"
+pytest = "^7.4.3"
+
+[tool.black]
+line-length = 120
+
+[tool.ruff]
+line-length = 120
 
 [build-system]
 requires = ["poetry-core"]
