--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,9 +16,12 @@ pydantic-settings = "^2.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
+pytest = "^7.4.3"
+
+
+[tool.poetry.group.linters.dependencies]
 ruff = "^0.1.7"
 black = "^23.11.0"
-pytest = "^7.4.3"
 
 [tool.black]
 line-length = 120
