--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ pytest-cov = "^4.1.0"
 pytest-mock = "^3.12.0"
 pytest-env = "^1.1.3"
 pytest-asyncio = "^0.21.1"
+httpx = "^0.24.1"
 
 
 [tool.pytest.ini_options]
