--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,9 +15,12 @@ python-keycloak = "^3.7.0"
 pydantic-settings = "^2.1.0"
 
 
-[tool.poetry.group.dev.dependencies]
+[tool.poetry.group.linters.dependencies]
 ruff = "^0.1.7"
 black = "^23.11.0"
+
+
+[tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
 pytest-cov = "^4.1.0"
 pytest-mock = "^3.12.0"
