--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,12 +2,12 @@
 name = "regtech-api-commons"
 version = "0.1.0"
 description = ""
-authors = ["lchen-2101 <73617864+lchen-2101@users.noreply.github.com>"]
+authors = ["CFPB's RegTech Team"]
 readme = "README.md"
 packages = [{include = "regtech_api_commons", from = "src"}]
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "^3.12"
 fastapi = "^0.109.1"
 requests = "^2.31.0"
 python-jose = "^3.3.0"
