--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ requests = "^2.31.0"
 python-jose = "^3.3.0"
 python-keycloak = "^4.0.0"
 pydantic-settings = "^2.1.0"
+uvicorn = "^0.29.0"
 
 
 [tool.poetry.group.linters.dependencies]
