--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ python-jose = "^3.3.0"
 python-keycloak = "^4.0.0"
 pydantic-settings = "^2.1.0"
 uvicorn = "^0.29.0"
+regtech-regex = {git = "https://github.com/cfpb/regtech-regex.git"}
 
 
 [tool.poetry.group.linters.dependencies]
