--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ requests = "^2.32.3"
 python-jose = "^3.3.0"
 python-keycloak = "^4.7.1"
 pydantic-settings = "^2.4.0"
+cffi = ">=1.17.1"
 uvicorn = "^0.32.0"
 regtech-regex = {git = "https://github.com/cfpb/regtech-regex.git"}
 
