--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ python-keycloak = "^4.7.3"
 pydantic-settings = "^2.4.0"
 uvicorn = "^0.32.1"
 regtech-regex = {git = "https://github.com/cfpb/regtech-regex.git"}
+pyjwt = "^2.10.1"
 
 
 [tool.poetry.group.linters.dependencies]
