--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ packages = [{include = "regtech_api_commons", from = "src"}]
 
 [tool.poetry.dependencies]
 python = "^3.12"
-fastapi = "^0.115.6"
+fastapi = { version = "^0.115.6", extras = ["anyio=^4.4.0"]}
 requests = "^2.32.3"
 python-keycloak = "^4.7.3"
 pydantic-settings = "^2.4.0"
